--- a/NAPS/css/content.css
+++ b/NAPS/css/content.css
@@ -1,20 +1,20 @@
-
-/*body{
-    font-family: Inter, sans-serif;
-    background-color: #f2f2f2;
-}*/
-
-
-#content{
-    flex-direction:column;
+/*Link css*/
+a{
+  text-decoration: none;
 }
-
-   
+/**********/
+/*main*/
+#content{
+  flex-direction: column;
+}
+/**********/
+/*title*/
 h1{
   padding: 15px 0px 0px 50px;
-   
   font-family: Arial, Helvetica, sans-serif;
   }
+/**********/
+  /*menu navigation + add network button*/
 
   #titlenav{
     width: 100%;
@@ -25,16 +25,12 @@ h1{
 
   #titlenav a{
     color: black;
-    text-decoration: none;
   }
 
-  #nobutton{
-    display: inline-flex;
-    margin-top: 10px;
-  }
-
+  /*add network button*/
   #add_network{
-    margin-left: 55%;
+    cursor: pointer;
+    margin-left: 58%;
     background: black;
     border-radius: 0px;
     color: white;
@@ -42,12 +38,34 @@ h1{
     width: 250px;
     height: 50px;
   }
-
-
+ 
+  #add_network:hover{
+    background-color: #404040;
+  }
+  /*menu navigation*/
+ 
+  #menu{
+    display: inline-flex;
+    margin-top: 10px;
+  }
+ 
+  .buttonlist{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 18px;
+    padding-top: 16px;
+  }
+ 
+  .buttonlist:not(#bold_network):hover{
+    background-color: #e6e6e6;
+  }
+ 
+  /*network button*/
   #bold_network{
-    padding-left: 30px;
-    padding-right: 30px;
-    margin-left: 50px;
+    cursor: auto;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-left: 45px;
     font-weight:bold;
     border-style: solid;
     border-color: #cfa40b;
@@ -56,23 +74,43 @@ h1{
     border-top: none;
     border-width:thick;
   }
-
-  .buttonlist{
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 18px;
-    padding-top: 16px;
-  }
-
+/**********/
+  /*action barre*/
  #actionBar{
     display: inline-flex;
     width: 100%;
   }
-
- #actionBar .buttons {
+  #actionBar button {
+    width: 100%;
+    height: 100%;
+    font-size: large;
+    padding: 0; 
+    border: none;
+    background: none; 
+    letter-spacing: 0.5px;
+  }
+  #actionBar .buttons {
     border: 1px solid #ddd;
   }
 
+  #actionBar .buttons:not(#delete,#empty,#zone_saisie){
+    cursor: pointer;
+  }
+  #actionBar .buttons:not(#delete,#empty,#zone_saisie):hover{
+    background-color: #e6e6e6;
+  }
+
+  #actionBar img:not(#loupe){
+    margin-right: 10px;
+  }
+  
+ #actionBar button p{
+   
+    font-size:small;
+    margin : 0.5em 0;
+   
+ }
+  /*button provision*/
   #actionBar #provision{
     border-left:none;
     width: 45%;
@@ -80,7 +118,7 @@ h1{
     padding-left: 3%;
     padding-right: 1%;
   }
-
+  /*delete button*/
   #actionBar #delete{
     border-left:none;
     width: 30%;
@@ -88,7 +126,7 @@ h1{
     padding-left: 1%;
     padding-right: 1%;
   }
-
+  /*refresh button*/
    #actionBar #refresh{
     text-align: left;
     border-left:none;
@@ -96,56 +134,40 @@ h1{
     height: 64px;
     padding-left: 1%;
   }
-
+  /*placeholder spacing*/
  #actionBar #empty{
     height: 62.5px;
     width: 160%;
   }
-
+  /*zone de saisie*/
   #actionBar input#zone_saisie {
     width: 100%;
     height: 62.5px;
-    padding: 0; /* Supprimer le remplissage */
+    padding: 0; 
     outline : none;
     padding-left: 10px;
     font-size: large;
+    border-right: none;;
+  }
+  /*button loupe*/
+  #loupe{
+    cursor: pointer;
+    padding-right: 10px;
+    border-top:1px solid #ddd ;
+    border-bottom: 1px solid #ddd;
+    fill: black;
   }
 
+  /*button filter*/
   #actionBar #filter{
     border-right: none;
     width: 35%;
     padding-right: 2%;
     height: 64px;
   }
+/**********/
 
-
- #actionBar button {
-    width: 100%;
-    height: 100%;
-   
-    font-size: large;
-    padding: 0; /* Supprimer le remplissage */
-    border: none; /* Supprimer la bordure */
-    background: none; /* Supprimer l'arrière-plan */
-    letter-spacing: 0.5px;
-  }
-
-
- #actionBar button p{
-   
-    font-size:small;
-    margin : 0.5em 0;
-   
- }
-
- #actionBar img{
-    margin-right: 10px;
-  }
-
-
-/*MA PARTIE*/
-
-
+/*tableau*/
 #tableau {
   padding-left: 50px;
   padding-right: 50px;
@@ -155,6 +177,10 @@ h1{
   background-color: #f4f4f4;
 }
 
+#tableau th, #tableau td {
+  padding: 15px;
+  text-align: left;
+}
 
 #tableau td{
     background-color: #ffff;
@@ -164,29 +190,66 @@ h1{
     height: 50px;
 }
 
-
-
+#tableau th {
+  font-size:15px;
+  color: #333333;
+  font-weight: lighter;
+  border: none;
+}
+/*sorting button en tête tableau*/
+.sorting_button{
+  cursor: pointer;
+}
+/*1er segment (contient checkbox)*/
 #tableau .start{
     border-left: 1px solid #ddd;
 } 
-
+/*dernier segment (contient trois points)*/
 #tableau .end{
-    border-right:1px solid #ddd;
+  vertical-align: text-top;
+  padding-right: 26px;
+  border-right:1px solid #ddd;
 }
 
-
-#tableau th, #tableau td {
-    
-    padding: 15px;
-    text-align: left;
-}
-#tableau th {
-    font-size:15px;
-    color: #333333;
-    font-weight: lighter;
-    border: none;
+.troispointsgras{
+  font-family:'Times New Roman';
+  color: black;
+  font-weight: bold;
+  font-size: xx-large;
 }
 
+/*css pop up quand trois point appuyé*/ 
+#action_panel{
+ 
+ 
+  background-color: white;
+  border: #f16e00;
+  border-style: solid;
+  border-width: 5px;
+  width: 10%;
+ 
+  z-index: 10;
+  position: absolute;
+ 
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  box-shadow: 0px 0px 3px gray;
+ 
+  font-size:small;
+  letter-spacing: 0.5px;
+ 
+  padding-right: 3px;
+  padding-left: 15px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+ 
+  display: none;
+ 
+}
+
+/*css relatif au logos*/
 .active p {
     color: black;
     background-color:#3DE35A;
@@ -205,9 +268,6 @@ h1{
 .green img{
     padding-right: 6px;
 }
-
-
-
 
 #tableau .div_loading{
   color: black;
@@ -250,11 +310,8 @@ h1{
   padding-top: 1px;
 }
 
-
-/*BOUTON RECUP SUR OPENCLASSROOM*/
-
-
-/* Customize the label (the container) */
+/*css check box*/
+/*conteneur*/
 .container {
   display: block;
   position: relative;
@@ -267,8 +324,8 @@ h1{
   -ms-user-select: none;
   user-select: none;
 }
-
-/* Hide the browser's default checkbox */
+ 
+/* reset default css */
 .container input {
   position: absolute;
   opacity: 0;
@@ -276,8 +333,8 @@ h1{
   height: 0;
   width: 0;
 }
-
-/* Create a custom checkbox */
+ 
+/*custom checkbox */
 .checkmark {
   position: absolute;
   top: 0;
@@ -287,30 +344,28 @@ h1{
   background-color: #fff;
   border: 1px solid black;
 }
-
-/* On mouse-over, add a grey background color */
+ 
 .container:hover input ~ .checkmark {
-  background-color: #ccc;
+  background-color: #e6e6e6;
 }
-
-/* When the checkbox is checked, add a blue background */
+ 
 .container input:checked ~ .checkmark {
   border: 2px solid #F16E00;
 }
-
-/* Create the checkmark/indicator (hidden when not checked) */
+ 
+/* Crée le checkmark */
 .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
-
-/* Show the checkmark when checked */
+ 
+/* affiche le checkmark quand nécessaire */
 .container input:checked ~ .checkmark:after {
   display: block;
 }
-
-/* Style the checkmark/indicator */
+ 
+/* style du checkmark */
 .container .checkmark:after {
 left: 9px;
 top: 5px;
@@ -323,44 +378,4 @@ border-width: 0 3px 3px 0;
 -ms-transform: rotate(45deg);
 transform: rotate(45deg);
 }
-
-
-
-#action_panel{
-  
-
-  background-color: white;
-  border: #f16e00;
-  border-style: solid;
-  border-width: 5px;
-  width: 10%;
-
-  z-index: 10;
-  position: absolute;
-
-  border-left: none;
-  border-right: none;
-  border-bottom: none;
-  box-shadow: 0px 0px 3px gray;
-
-  font-size:small;
-  letter-spacing: 0.5px;
-
-  padding-right: 3px;
-  padding-left: 15px;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  margin-bottom: 5px;
-
-  display: none;
-
-}
-
-
-
-
-
-
-
-  
-
+ 
