--- a/RAND/CSS/index.css
+++ b/RAND/CSS/index.css
@@ -1,329 +1,226 @@
-
-
-
-.btadd {
-    background-color: black;
-    color: white; 
-	padding:10px;
-	
-    
+#page{
+    display: flex;
+    flex-direction: column;
+    font-size: 1em;
+    padding-left: 3%;
+    width: 100%;
+    height: 80vh;
+    border-top: 1px solid rgb(204, 204, 204);
 }
-.oui{
-	
-	display: flex;
-      justify-content: flex-end;
-	  margin-right : 50px;
-   
+#header h1{
+    font-weight: normal;
 }
-ul{
-	float:left;
-	margin-left:55px;
+#navbar_wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
-h1{
-	border-top: 1px solid black;
-	margin-left:55px;
-	font-weight:normal;
+#navbar {
+    overflow: hidden;
+    padding-bottom: 0;
+    border-bottom: 2px solid rgb(204, 204, 204);
 }
-span{
-	font-weight:normal;
+#navbar a:hover {
+    cursor: pointer;
 }
 
-.active{
-	background-color:#7CFC00;
-	display: inline-block;
-    padding: 5px 20px;
-	border-radius: 20px;
-}
-.inactive{
-	color:white;
-	background-color:black;
-	display: inline-block;
-    padding: 5px 20px;
-	border-radius: 20px;
-	
-}
-.draft{
-	background-color:#F0F8FF;
-	display: inline-block;
-    padding: 5px 20px;
-	border-radius: 20px;
-}
-.refe {
-	border:none;
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: inline-block;
 }
 
-.dropbtna{
-	border:none;
-
+#navbar li {
+    float: left;
 }
 
-.btnAction{
-	border:none;
-}
-.menu2 {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: #f8f8f8;
-      border-top: 2px solid #ddd;
-	  margin-left:55px;
-    }
-    .menu2 .left, .menu2 .right {
-      display: flex;
-      align-items: center;
-	  border-right: 2px solid #ddd;
-	  border-left: 2px solid #ddd;
-	  height:100%;
-    }
-    .menu2 .left > div, .menu2 .right > div {
-      margin-right: 20px;
-      display: flex;
-      align-items: center;
-    }
-    .menu2 .left > div:last-child, .menu2 .right > div:last-child {
-      margin-right: 0;
-    }
-    .menu2 .action {
-      cursor: pointer;
-      padding: 5px 10px;
-      border: 1px solid #ddd;
-      border: none;
-      display: inline;
-      align-items: center;
-	   border-right: 2px solid #ddd;
-	  
-    }
-	.link{
-		border:none;
-		text-decoration: none;
-		font-size:40px;
-		background-color:white
-	}
-	.thead{
-		margin-left:500px;
-	}
-    .menu2 .action:hover {
-      background-color: #eee;
-    }
-    .menu2 .icon {
-      margin-right: 5px;
-    }
-    .menu2 .se {
-    float: right;
-	padding: 6px;
-	border: none;
-	margin-top: 8px;
-	margin-right: 16px;
-	font-size: 17px;
-	border-right: 2px solid #ddd;
-	
-    }
-	.menu2 .search{
-		border:none;
-		
-	}
-    .menu2 .search-button {
-      cursor: pointer;
-      padding: 5px;
-      border: none;
-      background: none;
-      display: flex;
-      align-items: center;
-
-    }
-    .menu2 .search-button:hover {
-      color: #f90;
-    }
-
-	
-}
-.menu2 .btnFiltre{
-	border: none;
-	border-left: 2px solid #ddd;
+#navbar li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-weight: 500;
 }
 
-
-
-.block{
-	height:800px;
-	background-color:#e7e3e3; 
-	margin-left:55px;
+#navbar li a:hover {
+    background-color: var(--light-grey);
 }
-td{
-	text-align:center;
-	border: 10px solid white;
-	background-color:#ffffff; 
+
+.line_select {
+    height: 5px;
 }
-table {
-	margin: 0 auto;
+.line--active {
+    background-color: var(--header-color);
+}
+
+#add_region{
+    display: flex;
+    justify-content: flex-end;
+    background-color: var(--text-color);
+    color: var(--white);
+    padding: 1% 3%;
+    margin-right: 4%;
+    margin-bottom: 0;
+    white-space: nowrap;
+}
+#add_region_text{
+    margin-left: 5%;
+}
+
+#action_navbar_wrapper {
+    display: flex;
+    flex-direction: row;
+    border-top: 1px solid rgb(204, 204, 204);
+    border-bottom: 1px solid rgb(204, 204, 204);
+    align-items: center;
+}
+
+button{
+    border: none;
+    background-color: var(--white);
+    cursor: pointer;
+    font-size: 1em;
+}
+
+#action_button{
+    border-right: 1px solid rgb(204, 204, 204);
+    padding: 1% 1.2%;
+}
+
+#refresh_button{
+    border-right: 1px solid rgb(204, 204, 204);
+    padding: 1% 1.2%;
+}
+#search{
+    border-right: 1px solid rgb(204, 204, 204);
+    border-left: 1px solid rgb(204, 204, 204);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.9%;
+    margin-left: 60%;
+}
+#search_navbar{
+    border: none;
+    width: 100%;
+    font-size: 0.9em;
+}
+#filter_navbar{
+    margin-left: 1%;
+}
+
+#table_wrapper{
+    background-color: var(--light-grey);
+    flex-grow: 1;
+    padding-left: 2.2%;
+    padding-right: 2.2%;
+}
+table{
+    width: 100%;
     border-collapse: separate;
     border-spacing: 0 10px;
-    width: 90%;
 }
-tr{
-	text-align:center;
-	margin-left:200px;
+th{
+    font-weight: normal;
+    text-align: left;
+    width: auto;
+    padding: 0.9%;
+    margin-right: 5%;
 }
-li{
-    display: inline-block; 
-	color: black;
-	text-decoration:none;
-	padding:10px;
-	
-   
+td{
+    padding: 0.9% 0.1%;
+    width: 9%;
+    background-color: white;
+    border: 1px solid white;
 }
-
-a{
-	color:black;
+.tr_table{
+    outline: 2px solid rgb(204, 204, 204);
 }
-
-#top-bar {
-  background-color: var(--primary-color);
-  color: var(--white);
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.bold_dot{
+    font-family:'Times New Roman';
+    color: black;
+    font-weight: bold;
+    font-size: xx-large;
+    text-decoration: none;
 }
-
-#bottom-bar
-{
-  padding: 10px 20px;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  background-color: var(--light-grey);
-  margin-left:55px;
+.td_last {
+    padding-right: 0.1%;
+    width: 7%;
+}
+.container_check{
+    position:relative;
+    margin-left: 40px;
 }
 
-nav {
-  display: flex;
+.checkmark {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 25px;
+    width: 25px;
+    background-color: #fff;
+    border: 1px solid black;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
-nav a {
-  color: white;
-  text-decoration: none;
-  padding: 8px 15px;
-  border-radius: 5px;
-  transition: background-color 0.3s;
+.container_check:hover input ~ .checkmark {
+    background-color: #e6e6e6;
 }
 
-@media screen and (min-width: 400px) {
-  #content {
-    display: flex;
-    margin-left: 3%;
-  }
+.container_check input:checked ~ .checkmark {
+    border: 2px solid #F16E00;
 }
 
-/* Navbar container */
-.navbar {
-  overflow: hidden;
-}
-
-/* Links inside the navbar */
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: var(--white);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* The dropdown container */
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-/* Dropdown button */
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: var(--white);
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-/* Add a golden background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: var(--orange);
-  color: black;
-}
-
-
-/* Dropdown content (hidden by default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: var(--light-grey);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  float: none;
-  color: var(--text-color);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-
-}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.fa-caret-down {
-  color: var(--orange);
-}
-
-.dropdown:hover .img .fa-caret-down {
-
-}
-	
-@media screen and (max-width: 600px){ 
-
-  .blocrand{
-    margin-left: 0px;
-  }
-
-  .menu1 ul{
-    margin-left: 0;
-    margin-top: 25px;
-    padding-left: 15px;
-  }
-
-  .oui{
-    margin: 0 15px 15px 0;
-  }
-
-  .oui p p{
+/* Crée le checkmark */
+.checkmark:after {
+    content: "";
     display: none;
-  }
-
-  .block, .menu2{
-    margin-left: 0px;
-    font-size: 10px;
-    overflow: auto;
-  }
-
-  .menu2 .se input{
-    width: 6em;
-  }
-
+    position: absolute;
 }
 
+/* affiche le checkmark quand nécessaire */
+.container_check input:checked ~ .checkmark:after {
+    display: block;
+}
+
+/* style du checkmark */
+.container_check .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid;
+    border-color: #F16E00;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+}
+
+.provisioning_state_active{
+    border: 2px solid var(--active);
+    border-radius: 15px;
+    padding: 0.9%;
+    background-color: var(--active);
+    text-align: center;
+    width: 50%;
+}
+.provisioning_state_draft{
+    border: 2px solid var(--light-grey);
+    border-radius: 15px;
+    padding: 0.9%;
+    background-color: var(--light-grey);
+    text-align: center;
+    width: 50%;
+}
+.provisioning_state_inactive{
+    border: 2px solid black;
+    border-radius: 15px;
+    padding: 0.9%;
+    background-color: black;
+    color: var(--white);
+    text-align: center;
+    width: 50%;
+}
